Replace TIME_WITH_SHORT_OFFSET -> TIME_SIMPLE

--- a/src/app/pages/employees/employee-settings/employee-settings-details/employee-settings-details.component.html
+++ b/src/app/pages/employees/employee-settings/employee-settings-details/employee-settings-details.component.html
@@ -19,7 +19,7 @@
                 Zona horaria
                 <mat-icon matTooltip="Los tiempos se vera en base a la zona horaria" color="primary">info</mat-icon>
               </td>
-              <td>{{ employeeSettings()?.timezone }} - {{ nowWithTimezone }}</td>
+              <td>{{ employeeSettings()?.timezone }} {{ nowWithTimezone }}</td>
             </tr>
           </tbody>
         </table>
