Move employee-settings

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -77,7 +77,7 @@
         </mat-expansion-panel-header>
 
         <mat-nav-list role="list" [awRequiredRole]="role.Employee">
-          <mat-list-item [routerLink]="siteUrl.employees.settings">Configuración</mat-list-item>
+          <mat-list-item [routerLink]="siteUrl.employeeSettings.settings">Configuración</mat-list-item>
           <mat-list-item [routerLink]="siteUrl.timesControlProgress.list">Control de tiempo</mat-list-item>
         </mat-nav-list>
       </mat-expansion-panel>
