--- a/src/app/pages/employee-settings/employee-settings-details/employee-settings-details.component.html
+++ b/src/app/pages/employee-settings/employee-settings-details/employee-settings-details.component.html
@@ -4,7 +4,7 @@
   <mat-card>
     <mat-card-content>
       <!-- toolbar -->
-      <button [routerLink]="[siteUrl.employees.settingsUpdate]" color="primary" mat-button>
+      <button [routerLink]="[siteUrl.employeeSettings.update]" color="primary" mat-button>
         <mat-icon>edit</mat-icon>
         Editar
       </button>
