Rename siteUrl item

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -61,7 +61,7 @@
               {{ timeControlIncidencesCount() }}
             </mat-chip>
           </a>
-          <mat-list-item [routerLink]="siteUrl.companyCalendar.home">Calendario</mat-list-item>
+          <mat-list-item [routerLink]="siteUrl.companyCalendar.calendar">Calendario</mat-list-item>
         </mat-nav-list>
       </mat-expansion-panel>
 
