--- a/src/app/pages/manage-holidays/manage-holidays.component.html
+++ b/src/app/pages/manage-holidays/manage-holidays.component.html
@@ -1,1 +1,9 @@
-<p>manage-holidays works!</p>,
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Días festivos</aw-page-header>
+
+  <mat-card>
+    <mat-card-content>
+      <h1>Contenido table</h1>
+    </mat-card-content>
+  </mat-card>
+</aw-page-base>
