--- a/src/app/pages/manage-holidays/manage-holidays.component.html
+++ b/src/app/pages/manage-holidays/manage-holidays.component.html
@@ -2,8 +2,92 @@
   <aw-page-header [breadcrumb]="breadcrumb">Días festivos</aw-page-header>
 
   <mat-card>
+    <!-- content -->
     <mat-card-content>
-      <h1>Contenido table</h1>
+      <!-- toolbar -->
+      <div class="d-flex flex-wrap justify-content-between">
+        <!-- button -->
+        <button mat-button color="primary" [routerLink]="siteUrl.companyTasks.create">
+          <mat-icon>add</mat-icon> Asignar días festivos a empleado
+        </button>
+
+        <!-- year selector -->
+        <aw-year-selector
+          (changeYearSelected)="handleYearSelectorChange($event)"
+          [dateSelected]="yearSelected"
+          [readOnly]="true" />
+
+        <!-- table filter -->
+        <aw-table-filter
+          (filterChange)="handleFilterChange($event)"
+          [apiResult]="apiResult"
+          [fieldsFilter]="fieldsFilter" />
+      </div>
+
+      <!-- table -->
+      @if (!loading) {
+        <table mat-table matSort (matSortChange)="handleSortChange($event)" [dataSource]="dataSource">
+          <!-- firstName -->
+          <ng-container matColumnDef="firstName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+            <td mat-cell *matCellDef="let row">{{ row.firstName }}</td>
+          </ng-container>
+
+          <!-- lastName -->
+          <ng-container matColumnDef="lastName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Apellidos</th>
+            <td mat-cell *matCellDef="let row">{{ row.lastName }}</td>
+          </ng-container>
+
+          <!-- email -->
+          <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Correo electrónico</th>
+            <td mat-cell *matCellDef="let row">{{ row.lastName }}</td>
+          </ng-container>
+
+          <!-- totalDays -->
+          <ng-container matColumnDef="totalDays">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Días totales</th>
+            <td mat-cell *matCellDef="let row">{{ row.totalDays }}</td>
+          </ng-container>
+
+          <!-- consumed -->
+          <ng-container matColumnDef="consumed">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Utilizados</th>
+            <td mat-cell *matCellDef="let row">{{ row.consumed }}</td>
+          </ng-container>
+
+          <!-- remaining -->
+          <ng-container matColumnDef="remaining">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Restantes</th>
+            <td mat-cell *matCellDef="let row">{{ row.totalDays - row.consumed }}</td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell p-4" [attr.colspan]="displayedColumns.length">No hay datos a mostrar</td>
+          </tr>
+        </table>
+
+        <!-- paginator -->
+        @if (dataSource) {
+          <mat-paginator
+            showFirstLastButtons
+            (page)="handlePageEvent($event)"
+            [length]="apiResult.totalItems"
+            [pageSize]="apiResult.pageSize"
+            [pageIndex]="apiResult.pageNumber - 1"
+            [pageSizeOptions]="[25, 50, 100]"
+            aria-label="Selección de pagina" />
+        }
+      } @else {
+        <!-- spinner -->
+        <div class="d-flex justify-content-center p-5">
+          <mat-progress-spinner color="primary" mode="indeterminate" />
+        </div>
+      }
     </mat-card-content>
   </mat-card>
 </aw-page-base>
