--- a/src/app/pages/manage-holidays/manage-holidays-list/manage-holidays.component.html
+++ b/src/app/pages/manage-holidays/manage-holidays-list/manage-holidays.component.html
@@ -7,8 +7,8 @@
       <!-- toolbar -->
       <div class="d-flex flex-wrap justify-content-between">
         <!-- button -->
-        <button mat-button color="primary" [routerLink]="siteUrl.companyTasks.create">
-          <mat-icon>add</mat-icon> Asignar días festivos a empleado
+        <button mat-button color="primary" [routerLink]="siteUrl.manageHolidays.assign">
+          <mat-icon>add</mat-icon> Asignar días festivos para el año {{ yearSelected.year }}
         </button>
 
         <!-- year selector -->
