Refactorizados nombres de manage-holidays

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -62,7 +62,7 @@
             </mat-chip>
           </mat-list-item>
           <mat-list-item [routerLink]="siteUrl.companyCalendar.calendar">Calendario</mat-list-item>
-          <mat-list-item [routerLink]="siteUrl.manageHolidays.manage">Días festivos</mat-list-item>
+          <mat-list-item [routerLink]="siteUrl.manageHolidays.claims">Días festivos</mat-list-item>
         </mat-nav-list>
       </mat-expansion-panel>
 
