--- a/src/app/pages/manage-holidays/holidays-assign/holidays-assign.component.html
+++ b/src/app/pages/manage-holidays/holidays-assign/holidays-assign.component.html
@@ -1,3 +1,22 @@
 <aw-page-base>
-  <aw-page-header>Asignar holidays</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb">Asignar días de vacaciones</aw-page-header>
+
+  <mat-card>
+    <mat-card-content>
+      <!-- toolbar -->
+      <div class="d-flex flex-wrap justify-content-between">
+        <!-- year selector -->
+        <aw-year-selector
+          (changeYearSelected)="handleYearSelectorChange($event)"
+          [dateSelected]="yearSelected"
+          [readOnly]="true" />
+
+        <!-- table filter -->
+        <aw-table-filter
+          (filterChange)="handleFilterChange($event)"
+          [apiResult]="apiResult"
+          [fieldsFilter]="fieldsFilter" />
+      </div>
+    </mat-card-content>
+  </mat-card>
 </aw-page-base>
