--- a/src/app/pages/manage-holidays/holidays-assigned/holidays-assigned.component.html
+++ b/src/app/pages/manage-holidays/holidays-assigned/holidays-assigned.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Días festivos</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb">Días de vacaciones</aw-page-header>
 
   <mat-card>
     <!-- content -->
