--- a/src/app/pages/manage-holidays/holidays-claim/holidays-claim.component.html
+++ b/src/app/pages/manage-holidays/holidays-claim/holidays-claim.component.html
@@ -1,3 +1,5 @@
 <aw-page-base>
-  <aw-page-header>Claims</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb">Días de vacaciones pendientes</aw-page-header>
+
+  <button [routerLink]="siteUrl.manageHolidays.assign">Asignar</button>
 </aw-page-base>
