Fix navbar toolbar

--- a/src/app/components/pages/page-base/page-base.component.html
+++ b/src/app/components/pages/page-base/page-base.component.html
@@ -7,5 +7,10 @@
 <section>
   <aw-sidenav>
     <ng-content />
+
+    <!-- toolbar -->
+    <div sidenavToolbar>
+      <ng-content select="[sidenavToolbar]" />
+    </div>
   </aw-sidenav>
 </section>
