--- a/src/app/pages/employee-calendar/employee-calendar.component.html
+++ b/src/app/pages/employee-calendar/employee-calendar.component.html
@@ -1,3 +1,9 @@
 <aw-page-base>
   <aw-page-header>Calendario</aw-page-header>
+
+  <button (click)="toggleSidenavToolbar()">Click</button>
+
+  <div sidenavToolbar>
+    <h1>PAgina de prueba</h1>
+  </div>
 </aw-page-base>
