Refactor employee-holiday

--- a/src/app/pages/company-calendar/company-calendar.component.html
+++ b/src/app/pages/company-calendar/company-calendar.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header>Gestionar días de vacaciones</aw-page-header>
+  <aw-page-header>Calendario de empresa</aw-page-header>
 
   <!-- toolbar -->
   <mat-card>
