--- a/src/app/pages/employee-calendar/employee-calendar.component.html
+++ b/src/app/pages/employee-calendar/employee-calendar.component.html
@@ -1,9 +1,67 @@
 <aw-page-base>
   <aw-page-header>Calendario</aw-page-header>
 
-  <button (click)="toggleSidenavToolbar()">Click</button>
+  <!-- toolbar -->
+  <mat-card>
+    <mat-card-content>
+      <div class="d-flex flex-row flex-wrap align-items-center">
+        <aw-year-selector
+          (changeYearSelected)="handleYearSelectorChange($event)"
+          [dateSelected]="yearSelected"
+          [readOnly]="true" />
 
-  <div sidenavToolbar>
-    <h1>PAgina de prueba</h1>
-  </div>
+        <div class="d-flex flex-column ms-auto">
+          <h1>Calendario laboral {{ yearSelected.year }}</h1>
+
+          <div class="d-flex justify-content-center">
+            @if (!loading) {
+              Horas trabajadas: <span class="text-success">{{ workingHoursYear }}</span>
+              <mat-icon color="primary" matTooltip="No aplica días festivos de empleados">info</mat-icon>
+            } @else {
+              <div class="d-flex justify-content-center">
+                <mat-progress-spinner color="primary" mode="indeterminate" [diameter]="50" />
+              </div>
+            }
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-center ms-auto legend">
+          <div><span class="legend-item non-working-day mx-2">&nbsp;</span> Día no laborable</div>
+          <div><span class="legend-item company-holiday mx-2">&nbsp;</span> Día festivo</div>
+        </div>
+      </div>
+
+      <mat-divider class="my-2" />
+
+      <!-- employee info -->
+      <div class="d-flex flex-column employee-info">
+        <span class="holidays-title">Días de vacaciones restantes</span>
+        <div class="holidays">
+          @if (loading) {
+            <mat-progress-spinner color="primary" mode="indeterminate" [diameter]="50" />
+          } @else if (!loading && employeeHoliday) {
+            {{ employeeHoliday.totalDays - employeeHoliday.consumed }}
+          } @else {
+            <span>0</span>
+          }
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
+  <div class="mt-2"></div>
+
+  <!-- calendar -->
+  <aw-year-calendar-view
+    (selectedChange)="handleSelectChange($event)"
+    [calendarEvents]="calendarEvents"
+    [loading]="loading"
+    [yearSelected]="yearSelected.year" />
+
+  <!-- navbar toolbar -->
+  @if (sidenavToolbarState()) {
+    <div sidenavToolbar>
+      <aw-employee-calendar-toolbar [yearSelected]="yearSelected.year" />
+    </div>
+  }
 </aw-page-base>
