--- a/src/app/pages/employee-calendar/employee-calendar.component.html
+++ b/src/app/pages/employee-calendar/employee-calendar.component.html
@@ -40,7 +40,7 @@
           @if (loading) {
             <mat-progress-spinner color="primary" mode="indeterminate" [diameter]="50" />
           } @else if (!loading && employeeHoliday) {
-            {{ employeeHoliday.totalDays - employeeHoliday.consumed }}
+            {{ employeeHoliday.available }}
           } @else {
             <span>0</span>
           }
