Fix style year-calendar headers

--- a/src/app/components/year-calendar-view/month-calendar-view/month-calendar-view.component.html
+++ b/src/app/components/year-calendar-view/month-calendar-view/month-calendar-view.component.html
@@ -6,7 +6,8 @@
         [startAt]="month()"
         [dateClass]="dateClass"
         [dateFilter]="handleDateFilter"
-        (selectedChange)="handleSelectedChange($event)" />
+        (selectedChange)="handleSelectedChange($event)"
+        class="month-calendar" />
     } @else {
       <div class="d-flex justify-content-center p-5">
         <mat-progress-spinner color="primary" mode="indeterminate" />
