--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,4 +11,4 @@ $aw-color-danger: #e57373;
  */
 $aw-not-working-day: #581845;
 $aw-company-holiday: #75af77;
-$aw-employee-holiday: #75af77;
+$aw-employee-holiday: #1e88e5;
