--- a/src/app/components/year-calendar-view/month-calendar-view/month-calendar-view.component.scss
+++ b/src/app/components/year-calendar-view/month-calendar-view/month-calendar-view.component.scss
@@ -1,47 +1,52 @@
 @import "variables";
 
-.calendar {
+::ng-deep .calendar {
   width: 325px;
   margin: 0 5px 5px 0;
   min-height: 358px;
-}
 
-/** Ocultar selector. */
-::ng-deep mat-calendar-header {
-  display: none;
-}
+  .month-calendar {
+    /** Ocultar selector. */
+    mat-calendar-header {
+      display: none;
+    }
 
-/** Ocultar titulo del mes. */
-::ng-deep .mat-calendar-body-label {
-  visibility: hidden;
-}
+    /** Ocultar titulo del mes. */
+    .mat-calendar-body-label {
+      visibility: hidden;
+    }
 
-/** Día marcado como no laborable. */
-::ng-deep .not-working-day {
-  background-color: $aw-not-working-day !important;
-  border-radius: 20px !important;
+    /** Custom style días del calendario. */
+    .mat-calendar-body-cell {
+      /** Día marcado como no laborable. */
+      &.not-working-day {
+        background-color: $aw-not-working-day !important;
+        border-radius: 20px !important;
 
-  .mat-calendar-body-cell-content {
-    color: white !important;
-  }
-}
+        .mat-calendar-body-cell-content {
+          color: white !important;
+        }
+      }
 
-/** Día marcado festivo de empresa. */
-::ng-deep .company-holiday {
-  background-color: $aw-company-holiday !important;
-  border-radius: 100% !important;
+      /** Día marcado festivo de empresa. */
+      &.company-holiday {
+        background-color: $aw-company-holiday !important;
+        border-radius: 100% !important;
 
-  .mat-calendar-body-cell-content {
-    color: white !important;
-  }
-}
+        .mat-calendar-body-cell-content {
+          color: white !important;
+        }
+      }
 
-/** Día marcado como festivo de empleado. */
-::ng-deep .employee-holiday {
-  background-color: $aw-employee-holiday !important;
-  border-radius: 20px !important;
+      /** Día marcado como festivo de empleado. */
+      &.employee-holiday {
+        background-color: $aw-employee-holiday !important;
+        border-radius: 20px !important;
 
-  .mat-calendar-body-cell-content {
-    color: black !important;
+        .mat-calendar-body-cell-content {
+          color: black !important;
+        }
+      }
+    }
   }
 }
