Renombrado pipe de formateo para Date

--- a/src/app/pages/company-tasks/company-task-view/company-task-details/company-task-details.component.html
+++ b/src/app/pages/company-tasks/company-task-view/company-task-details/company-task-details.component.html
@@ -14,7 +14,7 @@
           </tr>
           <tr class="table-list-row">
             <td>Fecha de creación</td>
-            <td>{{ companyTaskSelected()?.created | datetime }}</td>
+            <td>{{ companyTaskSelected()?.created | dateFormat }}</td>
           </tr>
           <tr class="table-list-row">
             <td>Activa</td>
