--- a/src/app/components/year-calendar-view/month-calendar-view/month-calendar-view.component.scss
+++ b/src/app/components/year-calendar-view/month-calendar-view/month-calendar-view.component.scss
@@ -44,7 +44,7 @@
         border-radius: 20px !important;
 
         .mat-calendar-body-cell-content {
-          color: black !important;
+          color: white !important;
         }
       }
     }
