--- a/src/app/pages/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/pages/company-tasks/company-task-list/company-task-list.component.html
@@ -30,7 +30,7 @@
           <ng-container matColumnDef="created">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de creación</th>
             <td mat-cell *matCellDef="let row">
-              {{ row.created | datetime }}
+              {{ row.created | dateFormat }}
             </td>
           </ng-container>
 
