--- a/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -64,7 +64,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Apertura</th>
             <td mat-cell *matCellDef="let row">
               <span [innerHTML]="row.deviceTypeStart | deviceType"></span>
-              {{ row.start | datetime: dateTimeShortFormat }}
+              {{ row.start | dateFormat: dateTimeShortFormat }}
 
               @if (getStartOpenStreetMapLink(row)) {
                 <a matTooltip="Ver en mapa" [href]="getStartOpenStreetMapLink(row)" target="_blank">
@@ -81,7 +81,7 @@
               <span [innerHTML]="row.deviceTypeFinish | deviceType"></span>
 
               @if (row.timeState === timeState.Close) {
-                {{ row.finish | datetime: dateTimeShortFormat }}
+                {{ row.finish | dateFormat: dateTimeShortFormat }}
                 @if (getFinishOpenStreetMapLink(row)) {
                   <a matTooltip="Ver en mapa" [href]="getFinishOpenStreetMapLink(row)" target="_blank">
                     <mat-icon>location_on</mat-icon>
