Calculadas horas totales en calendario empleado

--- a/src/app/pages/company-calendar/company-calendar.component.html
+++ b/src/app/pages/company-calendar/company-calendar.component.html
@@ -27,7 +27,7 @@
 
         <div class="d-flex justify-content-center ms-auto legend">
           <div><span class="legend-item non-working-day mx-2">&nbsp;</span> Día no laborable</div>
-          <div><span class="legend-item company-holiday mx-2">&nbsp;</span> Día festivo</div>
+          <div><span class="legend-item company-holiday mx-2">&nbsp;</span> Festivos</div>
         </div>
       </div>
     </mat-card-content>
