--- a/src/app/pages/employee-calendar/employee-calendar.component.scss
+++ b/src/app/pages/employee-calendar/employee-calendar.component.scss
@@ -12,6 +12,10 @@
     &.company-holiday {
       background-color: $aw-company-holiday;
     }
+
+    &.employee-holiday {
+      background-color: $aw-employee-holiday;
+    }
   }
 }
 
