--- a/src/app/pages/employee-calendar/employee-calendar.component.html
+++ b/src/app/pages/employee-calendar/employee-calendar.component.html
@@ -15,8 +15,7 @@
 
           <div class="d-flex justify-content-center">
             @if (!loading) {
-              Horas trabajadas: <span class="text-success">{{ workingHoursYear }}</span>
-              <mat-icon color="primary" matTooltip="No aplica días festivos de empleados">info</mat-icon>
+              Horas de trabajo: <span class="text-success">{{ workingHoursYear }}</span>
             } @else {
               <div class="d-flex justify-content-center">
                 <mat-progress-spinner color="primary" mode="indeterminate" [diameter]="50" />
@@ -26,8 +25,9 @@
         </div>
 
         <div class="d-flex justify-content-center ms-auto legend">
-          <div><span class="legend-item non-working-day mx-2">&nbsp;</span> Día no laborable</div>
-          <div><span class="legend-item company-holiday mx-2">&nbsp;</span> Día festivo</div>
+          <div><span class="legend-item non-working-day mx-2">&nbsp;</span> Días no laborable</div>
+          <div><span class="legend-item company-holiday mx-2">&nbsp;</span> Festivos</div>
+          <div><span class="legend-item employee-holiday mx-2">&nbsp;</span> Vacaciones</div>
         </div>
       </div>
 
@@ -61,7 +61,7 @@
   <!-- navbar toolbar -->
   @if (sidenavToolbarState()) {
     <div sidenavToolbar>
-      <aw-employee-calendar-toolbar [yearSelected]="yearSelected.year" />
+      <aw-employee-calendar-toolbar [yearSelected]="yearSelected.year" [employeeHoliday]="employeeHoliday" />
     </div>
   }
 </aw-page-base>
