Renombrado Horas trabajadas por horas estimadas

--- a/src/app/pages/company-calendar/company-calendar.component.html
+++ b/src/app/pages/company-calendar/company-calendar.component.html
@@ -15,7 +15,7 @@
 
           <div class="d-flex justify-content-center">
             @if (!loading) {
-              Horas trabajadas: <span class="text-success">{{ workingHoursYear }}</span>
+              Horas estimadas: <span class="text-success">{{ workingHoursYear }}</span>
               <mat-icon color="primary" matTooltip="No aplica días festivos de empleados">info</mat-icon>
             } @else {
               <div class="d-flex justify-content-center">
