--- a/src/app/pages/employee-calendar/employee-calendar.component.html
+++ b/src/app/pages/employee-calendar/employee-calendar.component.html
@@ -15,7 +15,7 @@
 
           <div class="d-flex justify-content-center">
             @if (!loading) {
-              Horas de trabajo: <span class="text-success">{{ workingHoursYear }}</span>
+              Horas estimadas: <span class="text-success">{{ workingHoursYear }}</span>
             } @else {
               <div class="d-flex justify-content-center">
                 <mat-progress-spinner color="primary" mode="indeterminate" [diameter]="50" />
