Eliminado Company de las entities

--- a/src/app/components/forms/errors/non-field-errors/non-field-errors.component.html
+++ b/src/app/components/forms/errors/non-field-errors/non-field-errors.component.html
@@ -1,13 +1,13 @@
 @if (hasErrors) {
   <mat-card>
     <mat-card-content>
-      <ul>
-        @for (error of getErrors(); track error) {
-          <li>
-            {{ error }}
-          </li>
-        }
-      </ul>
+      <div class="alert alert-danger">
+        <mat-list>
+          @for (error of getErrors(); track error) {
+            <mat-list-item>{{ error }}</mat-list-item>
+          }
+        </mat-list>
+      </div>
     </mat-card-content>
   </mat-card>
 }
