--- a/src/app/components/sidenav/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/components/sidenav/sidenav-menu/sidenav-menu.component.html
@@ -10,7 +10,7 @@
       <mat-panel-title><mat-icon>view_list</mat-icon> Administración</mat-panel-title>
     </mat-expansion-panel-header>
 
-    <mat-nav-list role="list">
+    <mat-nav-list>
       <mat-list-item [routerLink]="siteUrl.dashboard.dashboard">Panel</mat-list-item>
     </mat-nav-list>
   </mat-expansion-panel>
@@ -26,7 +26,7 @@
       <mat-panel-title><mat-icon>view_list</mat-icon> Empresa</mat-panel-title>
     </mat-expansion-panel-header>
 
-    <mat-nav-list role="list">
+    <mat-nav-list>
       <span [awRequiredRole]="role.Staff">
         <mat-list-item [routerLink]="siteUrl.companySettings.details">Configuración</mat-list-item>
       </span>
@@ -58,7 +58,7 @@
       <mat-panel-title><mat-icon>view_list</mat-icon> Empleado</mat-panel-title>
     </mat-expansion-panel-header>
 
-    <mat-nav-list role="list" [awRequiredRole]="role.Employee">
+    <mat-nav-list [awRequiredRole]="role.Employee">
       <mat-list-item [routerLink]="siteUrl.employeeSettings.settings">Configuración</mat-list-item>
       <mat-list-item [routerLink]="siteUrl.timesControlProgress.list">Control de tiempo</mat-list-item>
       <mat-list-item [routerLink]="siteUrl.employeeCalendar.index">Calendar</mat-list-item>
