--- a/src/app/pages/company-calendar/company-calendar.component.html
+++ b/src/app/pages/company-calendar/company-calendar.component.html
@@ -5,10 +5,13 @@
   <mat-card>
     <mat-card-content>
       <div class="d-flex flex-row flex-wrap align-items-center">
-        <aw-year-selector
-          (changeYearSelected)="handleYearSelectorChange($event)"
-          [dateSelected]="yearSelected"
-          [readOnly]="true" />
+        <div>
+          <aw-year-selector
+            (changeYearSelected)="handleYearSelectorChange($event)"
+            [dateSelected]="yearSelected"
+            [readOnly]="true" />
+          <aw-company-calendar-selector (companyCalendarChange)="handleCompanyCalendarChange($event)" />
+        </div>
 
         <div class="d-flex flex-column ms-auto">
           <h1>Calendario laboral {{ yearSelected.year }}</h1>
