Creado TimeProvider como wrapper request/response

--- a/src/app/components/pages/page-base/page-base.component.html
+++ b/src/app/components/pages/page-base/page-base.component.html
@@ -9,8 +9,8 @@
     <ng-content />
 
     <!-- toolbar -->
-    <div sidenavToolbar>
-      <ng-content select="[sidenavToolbar]" />
+    <div awSidenavToolbar>
+      <ng-content select="[awSidenavToolbar]" />
     </div>
   </aw-sidenav>
 </section>
