--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -24,7 +24,7 @@
 
   <!-- sidenav toolbar -->
   <mat-sidenav [opened]="sidenavToolbarState()" mode="side" position="end" class="sidenav-toolbar">
-    <ng-content select="[sidenavToolbar]" />
+    <ng-content select="[awSidenavToolbar]" />
   </mat-sidenav>
 
   <!-- page content -->
