--- a/src/app/pages/company-calendar/company-calendar.component.html
+++ b/src/app/pages/company-calendar/company-calendar.component.html
@@ -1,5 +1,12 @@
 <aw-page-base>
-  <aw-page-header>Calendario de empresa</aw-page-header>
+  <aw-page-header>
+    Calendario de empresa
+
+    <!-- header links -->
+    <div class="header-links">
+      <aw-company-calendar-header-links />
+    </div>
+  </aw-page-header>
 
   <!-- toolbar -->
   <mat-card>
