--- a/src/app/pages/employee-calendar/employee-calendar.component.html
+++ b/src/app/pages/employee-calendar/employee-calendar.component.html
@@ -60,7 +60,7 @@
 
   <!-- navbar toolbar -->
   @if (sidenavToolbarState()) {
-    <div sidenavToolbar>
+    <div awSidenavToolbar>
       <aw-employee-calendar-toolbar [yearSelected]="yearSelected.year" [employeeHoliday]="employeeHoliday" />
     </div>
   }
